# light-mlir

./: CMakeLists.txt
include/: Interpreter.h  OpRegistry.h  eval.h
src/: Interpreter.cpp  main.cpp
src/eval/: ArithOps.cpp  FuncOps.cpp  LinalgOps.cpp  MemRefOps.cpp  ScfOps.cpp
test/: CMakeLists.txt  branch.mlir  call.mlir  lit.cfg.py  lit.site.cfg.py.in  matmul.mlir  test_loop.mlir  test_scf_memref.mlir
test/Dialect/: arith_add.mlir  canonicalize.mlir  test_memref.mlir
test/Dialect/Arith/: arith_add.mlir
test/Dialect/Memref/: test_memref.mlir  test_scf_memref.mlir
test/Dialect/Scf/: scf_loop.mlir  simple_branch.mlir
test/Interpreter/: function_call.mlir  stack_trace.mlir  stacktrace.mlir
